# zenith-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENCE  README.md  vcpkg.json
shader/: triangle.vert
src/: helloworld.cpp  main.cpp
src/editor/: editor.cpp
src/engine/: application.cpp  application.hpp  entity.hpp  input_manager.cpp  input_manager.hpp  renderer.cpp  renderer.hpp  resource.hpp  resource_manager.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
src/engine/resources/: texture.hpp
src/runtime/: game.cpp
